force-app/main/default/objects/Invoice_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Invoice Line Item details.</description>
    <inlineHelpText>Please input a general outline of the purpose of this line item.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>