force-app/main/default/objects/Invoice_Line_Item__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    <description>Total cost for the invoice.</description>
    <formula>Quantity__c *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total cost for the invoice.</inlineHelpText>
    <label>Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>