force-app/main/default/objects/Invoice_Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity/amount associated with the line item.</description>
    <inlineHelpText>Please enter quantity.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>